修改文章划分简介部分
Signed-off-by: Duke Lazy <dukelazy@Gmail.com>

--- a/source/_posts/2015-12-08-apache.md
+++ b/source/_posts/2015-12-08-apache.md
@@ -6,6 +6,8 @@ comments: true
 categories: 
 ---
 
+<!-- more -->
+
 虽然很多服务都迁移到Nginx了，但是一直不太满意Nginx的目录索引展示效果，所以目录索引的网站一直用的还是Apache。不过好像Nginx可以用fancyindex模块来定制所以的展示方式，http://mirrors.163.com 好像用的就是这个，不过还没有研究，有时间再看看吧。
 最近忽然想要为目录展示的时候为一些特殊的目录加上一个说明，对目录做一个说明。所以需要定制下Apache的索引样式，下面记录下过程。
 
